[gd_scene load_steps=3 format=3 uid="uid://b7ttrpi6bmibx"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_7tad8"]
[ext_resource type="Texture2D" uid="uid://bglx64ih7lh5t" path="res://icon.svg" id="2_o5kln"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7tad8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_o5kln")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -180.0
offset_right = 168.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Start Game"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -180.0
offset_right = 168.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Level1" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Level 2"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer2/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer2/Level2" to="." method="_on_level_2_pressed"]
